--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
             "email": "gustavosantossilveira12360@gmail.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^10.5",
+        "phpunit/php-code-coverage": "^10.1"
+    },
+    "scripts": {
+        "test":"XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-text --strict-coverage",
+        "coverage": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html=test_coverage && google-chrome test_coverage/index.html"
+    }
 }
